@@ -593,30 +593,16 @@ distributions {
     }
 }
 
-def getIP() {
-    InetAddress result = null;
-    Enumeration<NetworkInterface> interfaces = NetworkInterface.getNetworkInterfaces();
-    while (interfaces.hasMoreElements()) {
-        Enumeration<InetAddress> addresses = interfaces.nextElement().getInetAddresses();
-        while (addresses.hasMoreElements()) {
-            InetAddress address = addresses.nextElement();
-            if (!address.isLoopbackAddress()) {
-                if (address.isSiteLocalAddress()) {
-                    return address.getHostAddress();
-                } else if (result == null) {
-                    result = address;
-                }
-            }
-        }
-    }
-    return (result != null ? result : InetAddress.getLocalHost()).getHostAddress();
-}
-
 run {
     dependsOn jvxmlConfigurations
     dependsOn configurations.jvxmlJNDI
 
     version = JVOICEXML_VERSION
+
+// Add the following lines to the jvmArgs to enable RMI logging
+//                "-Djava.rmi.server.logCalls=true",
+//                "-Dsun.rmi.server.logLevel=VERBOSE",
+//                "-Dsun.rmi.loader.logLevel=VERBOSE",
 
     mainClassName = "org.jvoicexml.startup.Startup"
     classpath = sourceSets.main.runtimeClasspath \
@@ -653,7 +639,7 @@ task(shutdown, type: JavaExec) {
     main = "org.jvoicexml.startup.Shutdown"
     classpath = sourceSets.main.runtimeClasspath \
                 + files("${project(':org.jvoicexml').buildDir}/config") \
-                + files("${project(':org.jvoicexml.jndi').buildDir}/libs/org.jvoicexml.jndi-${JVOICEXML_VERSION}.jar")
+                + files("${project(':org.jvoicexml.client').buildDir}/libs/org.jvoicexml.client-${JVOICEXML_VERSION}.jar")
     jvmArgs = ["-Djvoicexml.config=${project(':org.jvoicexml').buildDir}/config",
                "-Djava.security.manager",
                "-Djava.security.policy=file://${project(':org.jvoicexml').buildDir}/config/jvoicexml.policy",
@@ -663,14 +649,11 @@ task(shutdown, type: JavaExec) {
 
 startScripts {
     mainClassName = "org.jvoicexml.startup.Startup"
-    classpath += files('../config') \
-              + files("../lib/org.jvoicexml.jndi-${JVOICEXML_VERSION}.jar")
+    classpath += files('../config')
     applicationName = "jvxml-startup"
     defaultJvmOpts = ["-Xms1024m", "-Xmx2048m"]
     defaultJvmOpts = [ "-Djava.library.path=lib",
                "-Djava.security.manager",
-               "-Djava.rmi.server.codebase=http://${getIP()}:9595/jndi/",
-               "-Djava.rmi.server.useCodebaseOnly=false",
                "-Djava.security.policy=config/jvoicexml.policy",
                "-Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager",
                "-Dorg.eclipse.jetty.util.log.class=org.eclipse.jetty.util.log.Slf4jLog" ]
@@ -685,11 +668,13 @@ startScripts {
 task createShutdownApp(type: CreateStartScripts) {
     mainClassName = "org.jvoicexml.startup.Shutdown"
     classpath = startScripts.classpath \
-                + files('../config')
+                + files('../config') \
+                + files("../libs/org.jvoicexml.client-${JVOICEXML_VERSION}.jar")
     outputDir = startScripts.outputDir
     applicationName = 'jvxml-shutdown'
     defaultJvmOpts = ["-Xms1024m", "-Xmx2048m"]
     defaultJvmOpts = [ "-Djava.library.path=lib",
+               "-Djava.security.manager",
                "-Djava.security.policy=config/jvoicexml.policy",
                "-Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager",
                "-Dorg.eclipse.jetty.util.log.class=org.eclipse.jetty.util.log.Slf4jLog" ]
